--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
       h1 {
         font-size: 3.2em;
-        line-height: 1.1;
       }
 
       #app {
@@ -65,31 +64,13 @@
       }
 
       .card {
-        padding: 2em;
+        padding-bottom: 2em;
       }
 
       .read-the-docs {
         color: #888;
       }
 
-      button {
-        border-radius: 8px;
-        border: 1px solid transparent;
-        padding: 0.6em 1.2em;
-        font-size: 1em;
-        font-weight: 500;
-        font-family: inherit;
-        background-color: #1a1a1a;
-        cursor: pointer;
-        transition: border-color 0.25s;
-      }
-      button:hover {
-        border-color: #646cff;
-      }
-      button:focus,
-      button:focus-visible {
-        outline: 4px auto -webkit-focus-ring-color;
-      }
 
       @media (prefers-color-scheme: light) {
         :root {
@@ -110,7 +91,7 @@
       <div>
         <h1>Nostr Onboarding Widget</h1>
         <div class="card">
-          <button id="counter" type="button"></button>
+          <div id="target"></div>
         </div>
         <a href="https://github.com/coracle-social/nonboard" class="read-the-docs">
           Click here to learn more
@@ -118,9 +99,11 @@
       </div>
     </div>
     <script type="module">
-      import { setupCounter } from './src/counter'
+      import nb from './src/index'
 
-      setupCounter(counter)
+      nb({
+
+      }).renderDefault(target)
     </script>
   </body>
 </html>
