--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         line-height: 1.5;
         font-weight: 400;
 
-        color-scheme: light dark;
-        color: rgba(255, 255, 255, 0.87);
-        background-color: #242424;
+        color: #213547;
+        background-color: #eee;
 
         font-synthesis: none;
         text-rendering: optimizeLegibility;
@@ -57,30 +56,15 @@
         padding-bottom: 2em;
       }
 
-      .read-the-docs {
-        color: #888;
-        font-weight: 500;
-        color: #646cff;
-        text-decoration: inherit;
-        text-align: center;
-        display: block;
+      .footer {
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
       }
 
-      .read-the-docs:hover {
-        color: #535bf2;
-      }
-
-      @media (prefers-color-scheme: light) {
-        :root {
-          color: #213547;
-          background-color: #eee;
-        }
-        .read-the-docs:hover {
-          color: #747bff;
-        }
-        button {
-          background-color: #f9f9f9;
-        }
+      .footer > * {
+        cursor: pointer;
       }
     </style>
   </head>
@@ -91,9 +75,15 @@
         <div class="card">
           <div id="target"></div>
         </div>
-        <a href="https://github.com/coracle-social/nonboard" class="read-the-docs">
-          Click here to learn more
-        </a>
+        <div class="footer">
+          <a href="https://github.com/coracle-social/nonboard">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17 7.82996L18.6965 9.35678C20.239 10.7451 21.0103 11.4392 21.0103 12.33C21.0103 13.2207 20.239 13.9148 18.6965 15.3031L17 16.83" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
+            <path d="M13.9868 5.00037L12 12.4152L10.0132 19.8301" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
+            <path d="M6.99999 7.82996L5.30352 9.35678C3.76096 10.7451 2.98969 11.4392 2.98969 12.33C2.98969 13.2207 3.76096 13.9148 5.30352 15.3031L6.99999 16.83" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
     <script type="module">
