--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         padding: 2rem;
       }
 
+      #target {
+        height: 480px;
+      }
+
       .logo {
         height: 6em;
         padding: 1.5em;
