Add avatar input

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       body {
         margin: 0;
         display: flex;
-        place-items: center;
+        flex-direction: column;
+        align-items: center;
         min-width: 320px;
         min-height: 100vh;
       }
@@ -37,10 +38,6 @@
         max-width: 1280px;
         margin: 0 auto;
         padding: 2rem;
-      }
-
-      #target {
-        height: 480px;
       }
 
       .logo {
